[package]
name = "decimal-rs"
version = "0.1.35"
authors = ["David Li <davidli2010@foxmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
description = "High precision decimal implementation for Rust"
keywords = ["decimal", "numeric", "fixed", "precision"]
repository = "https://github.com/cod-technologies/decimal-rs.git"
homepage = "https://github.com/cod-technologies/decimal-rs"
documentation = "https://docs.rs/decimal-rs/"

[dependencies]
ethnum = "1.1.1"
thiserror = "1.0.30"
stack-buf = "0.1.6"
fast-float = "0.2.0"
serde = { version = "1.0.136", optional = true }

[dev-dependencies]
bencher = "0.1.5"
serde_json = "1.0.79"
bincode = "1.3.3"

[[bench]]
name = "benchmark"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
